# nBot

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml
assets/: help_template.html  rank_template.html  report_template.html
backend/: Cargo.toml
backend/src/: auth.rs  http.rs  logs.rs  main.rs  models.rs  persistence.rs  qq_face.rs  render_image.rs  task.rs  utils.rs
backend/src/bot/: mod.rs  monitor.rs  qr.rs
backend/src/bot/handlers/: bots.rs  chat.rs  contacts.rs  logs.rs  mod.rs  modules.rs  napcat.rs  stats.rs
backend/src/bot/runtime/: api.rs  command_exec.rs  connection.rs  discord.rs  help_image.rs  message.rs  mod.rs  privacy.rs
backend/src/bot/runtime/command_exec/: llm_abuse.rs  llm_forward.rs  plugin_outputs.rs
backend/src/bot/runtime/command_exec/llm_forward/: download.rs  output_extract.rs  redact.rs
backend/src/bot/runtime/command_exec/llm_forward/multimodal/: audio.rs  bundle.rs  common.rs  image.rs  mod.rs
backend/src/bot/runtime/command_exec/llm_forward/multimodal/common/: forward.rs
backend/src/bot/runtime/command_exec/llm_forward/multimodal/video/: ctx.rs  direct.rs  ffmpeg.rs  frames.rs  mod.rs
backend/src/bot/runtime/message/: reply.rs
backend/src/bot/runtime/message/reply/: forward.rs
backend/src/command/: handlers.rs  mod.rs  types.rs
backend/src/container/: handlers.rs
backend/src/database/: handlers.rs
backend/src/module/: effective.rs  handlers.rs  mod.rs  types.rs
backend/src/plugin/: manager.rs  mod.rs  package.rs  registry.rs  runtime.rs  types.rs  verifier.rs
backend/src/plugin/js/: runtime.js
backend/src/plugin/runtime/: ops.rs  state.rs
backend/src/plugin/runtime/ops/: core.rs  group.rs  http.rs  llm.rs  render.rs  storage.rs
backend/src/plugin_handlers/: commands.rs  install.rs  manage.rs  market.rs  mod.rs  util.rs
backend/src/tool/: handlers.rs  mod.rs  programs.rs  runners.rs  types.rs
data/: commands.json
deploy/: README.md
docker/: entrypoint.sh
docs/: README.md
scripts/: check-builtin-plugins.mjs  clean.ps1  (+4 more)
webui/src-tauri/: Cargo.toml  tauri.conf.json
webui/src-tauri/capabilities/: default.json
webui/src-tauri/icons/: icon.icns
webui/src-tauri/src/: lib.rs  main.rs
(+75 files in other folders)
