[package]
name = "nbot-desktop"
version = "0.0.1"
description = "nBot Desktop (Tauri)"
authors = ["nBot contributors"]
edition = "2021"

[lib]
# The `_lib` suffix is necessary to avoid Windows name conflicts between the lib and bin.
name = "nbot_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace]
